--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1click_internal",
+  "name": "1clickdistributors_internal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.6",
+    "@nextui-org/input": "^2.2.4",
+    "@nextui-org/system": "^2.2.5",
+    "@nextui-org/theme": "^2.2.9",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.55.4",
+    "framer-motion": "^11.5.4",
+    "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.9"
+    "react-redux": "^9.1.2",
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "postcss": "^8",
