--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.55.4",
     "framer-motion": "^11.5.4",
+    "js-cookie": "^3.0.5",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "redux-saga": "^1.3.0"
   },
   "devDependencies": {
