--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@tanstack/react-query": "^5.55.4",
     "framer-motion": "^11.5.4",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "next": "14.2.9",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
     "redux-saga": "^1.3.0"
   },
