--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/theme": "^2.2.9",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.55.4",
+    "firebase": "^10.13.2",
     "framer-motion": "^11.5.4",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
