--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-multi-select-component": "^4.3.4",
     "react-redux": "^9.1.2",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
