--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@nextui-org/theme": "^2.2.9",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.55.4",
+    "chart.js": "^4.4.4",
     "firebase": "^10.13.2",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.11.1",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "next": "14.2.9",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
