--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-redux": "^9.1.2",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "postcss": "^8",
