--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
     "react-multi-select-component": "^4.3.4",
     "react-redux": "^9.1.2",
